# jupyter_events

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASE.md  SECURITY.md  pyproject.toml  setup.py
.github/workflows/: check-release.yml  linter.yml  python-tests.yml  unittest.yml
docs/: conf.py  index.md  index.rst  requirements.txt
docs/demo/: demo-notebook.ipynb  index.md
docs/pages/: application.rst  configure.md  configure.rst  demo-notebook.ipynb  demo.md  redaction_policies.md  schemas.md  schemas.rst
docs/user_guide/: application.md  configure.md  defining-schema.md  event-schemas.md  first-event.md  index.md  listeners.md  modifiers.md
jupyter_events/: __init__.py  _categories.py  _version.py  categories.py  cli.py  dataclasses.py  logger.py  pytest_plugin.py  redactor.py  schema.py  schema_registry.py  traits.py  utils.py  validators.py  yaml.py
jupyter_events/schemas/: event-metaschema.yml  property-metaschema.yml  reserved-property-metaschema.yml
tests/: conftest.py  test_allowed_schemas.py  test_category_filtering.py  test_cli.py  test_eventlog.py  test_listeners.py  test_logger.py  test_modifiers.py  test_redaction.py  test_redactor.py  test_register_schema.py  test_schema.py  test_schema_registry.py  test_traits.py  utils.py
tests/schemas/bad/: bad-id.yaml  invalid.yaml  missing-parent-policies.yaml  missing-policy-array.yaml  missing-policy-nested-array.yaml  nested-reserved-property.yaml  reserved-property.yaml
tests/schemas/good/: array.yaml  basic.json  basic.yaml  nested-array.yaml  nested-user.yaml  user.yaml  user2.yaml
